# fastapi-complete-eric

./: .gitignore  .pep8  .prettierignore  README.md
03-poetry-install/: pyproject.toml
03-poetry-install/03_poetry_install/: __init__.py
05-python-refresher/01-variables/: variables.py
05-python-refresher/02-comments/: comments.py
05-python-refresher/03-assignment/: assignment.py
05-python-refresher/04-string-formatting/: string-formatting.py
05-python-refresher/05-user-input/: user-input.py
05-python-refresher/06-assignment-string/: assignment-string.py
05-python-refresher/07-lists/: lists.py
05-python-refresher/08-sets-tuples/: sets-tuples.py
05-python-refresher/09-assignment-lists/: assignment-lists.py
05-python-refresher/10-boolean-operators/: boolean-operators.py
05-python-refresher/11-if-else/: if-else.py
05-python-refresher/12-assignment-if-else/: assignment-if-else.py
05-python-refresher/13-loops/: loops.py
05-python-refresher/14-assignment-loops/: assignment-loops.py
05-python-refresher/15-dictionaries/: dictionary.py
05-python-refresher/16-assignment-dictionaries/: assignment-dictionary.py
05-python-refresher/17-functions/: functions.py
05-python-refresher/18-assignment-functions/: assignment-functions.py
05-python-refresher/19-import/: homework_grades.py  standardlib.py
05-python-refresher/20-oop/: student.py
05-python-refresher/21-inheritance/: student-inheritance.py
06-virtual-env/: pyproject.toml
07-fastapi-basic/: books.py  examples.py  pyproject.toml
07-fastapi-basic-renew/: books.py  pyproject.toml
07-fastapi-basic-renew/postman/: postman_collection.json
08-fastapi-advanced/: books2.py  pyproject.toml
08-fastapi-advanced-renew/: books.py  pyproject.toml
09-http-exceptions-status-code/: books2-assignment.py  books2.py  pyproject.toml
10-database/: docker-compose.yml  pyproject.toml
10-database/TodoApp/: main.py  models.py
11-database/: Dockerfile  docker-compose.yml  pyproject.toml  todos.db
11-database/app/: main.py  models.py
13-authentication/: .gitignore  Dockerfile  pyproject.toml  todos.db
13-authentication-renew/: Dockerfile  pyproject.toml
13-authentication-renew/app/: auth.py  main.py
13-authentication-renew/app/routers/: auth.py  todosapp.py
13-authentication/app/: auth.py  models.py
13-authentication/app/sqlite/: queries.sql
14-auth-requests/: docker-compose.yml  pyproject.toml
14-auth-requests-renew/: pyproject.toml
14-auth-requests-renew/app/: main.py  models.py
14-auth-requests-renew/app/routers/: admin.py  auth.py  todosapp.py  users.py
14-auth-requests/app/: database.py  main.py
14-auth-requests/app/sqlite/: queries.sql
16-routing/: docker-compose.yml
16-routing/app/: main.py
16-routing/app/routers/: auth.py  todos.py  users.py
17-alembic/: alembic.ini  docker-compose.yml  pyproject.toml
17-alembic-renew/: alembic.ini  docker-compose.yml  pyproject.toml
17-alembic-renew/alembic/: env.py
17-alembic-renew/alembic/versions/: 21b1a4f93697_create_phone_number_for_user_column.py
17-alembic-renew/app/: models.py
17-alembic-renew/app/routers/: auth.py  todos.py  users.py
17-alembic/alembic/: env.py
17-alembic/alembic/versions/: 181d687473a4_create_address_table.py  4f808f0d858c_create_address_id_to_users.py  9b73fc7d3375_create_phone_number_for_user_col.py  c511ac47feb4_add_apt_num_col.py
17-alembic/app/: database.py  main.py  models.py
17-alembic/app/routers/: address.py  auth.py  todos.py
17-alembic/db-queries/PostgreSQL/: create_tables  create_tables_init
17-alembic/postman/: personal-fastapi-complete-eric.postman_collection.json
18-fullstack/: .gitignore  docker-compose.yml  pyproject.toml
18-fullstack/app/: database.py  main.py
18-fullstack/app/company/: companyapis.py
18-fullstack/app/routers/: auth.py  todos.py  todosapi.py  users.py
(+13 files in other folders)
