[tool.poetry]
name = "08-fastapi-advanced"
version = "0.1.0"
description = ""
authors = ["Noah Kim"]
readme = "README.md"
packages = [{include = "08_fastapi_advanced"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
